@@ -10,6 +10,7 @@
  395069 faster thread filtering
  395475 make the save dialog simpler and more consistent with other Gnome apps
  397409 remove unneeded temporary objects from Quark::to_view()
+ 398074 free memory read on socket error
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
